src/test/deca/context/valid/readint.deca
// Description :
// test de l'instruction readInt()
//
// Résultats :
// ok

{
//  int x;
  float y;
//  x = readInt();
  y = readInt();
}
