src/test/deca/context/invalid/instance_of_null.deca
// Description :
// test de instanceof
//
// Résultats :
// Erreur contextuelle
// Ligne 9 : Opération instanceof impossible entre des objets de type null et int(règle 3.40)

{
   null instanceof int;
}
